[gd_scene load_steps=2 format=3 uid="uid://t43uhr1y8pdk"]

[ext_resource type="Script" path="res://globals/test.gd" id="1_xg0ks"]

[node name="Test" type="Button"]
offset_right = 1000.0
offset_bottom = 1000.0
script = ExtResource("1_xg0ks")

[node name="MouseFocusBox" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -250.0
offset_top = -330.0
offset_right = 250.0
offset_bottom = 170.0
mouse_force_pass_scroll_events = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MouseFocusBox" to="." method="_on_mouse_focus_box_mouse_entered"]
[connection signal="mouse_exited" from="MouseFocusBox" to="." method="_on_mouse_focus_box_mouse_exited"]
