extends Button


func _on_mouse_entered() -> void:
	print("yes")
	pass  # Replace with function body.


func _on_mouse_exited() -> void:
	print("no")
	pass  # Replace with function body.


func _on_mouse_focus_box_mouse_exited() -> void:
	print("no")
	pass  # Replace with function body.


func _on_mouse_focus_box_mouse_entered() -> void:
	print("yes")
	pass  # Replace with function body.
